--- a/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.WinForms.Tests.csproj
+++ b/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.WinForms.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFrameworks>net6.0-windows;net462</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
@@ -9,6 +9,7 @@
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<Platform>x64</Platform>
 		<PlatformName>windows</PlatformName>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
