some work on unit tests

--- a/StreetSmartAPI/StreetSmart.Tests.NET6/App.config
+++ b/StreetSmartAPI/StreetSmart.Tests.NET6/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<runtime>
+	<!--<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<probing privatePath="bin"/>
 		</assemblyBinding>
-	</runtime>
+	</runtime>-->
+	<!--<RunSettings>
+		<xUnit>
+			<AppDomain>denied</AppDomain>
+		</xUnit>
+	</RunSettings>-->
 </configuration>
