--- a/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.WinForms.Tests.csproj
+++ b/StreetSmartAPI/StreetSmart.Tests.NET6/StreetSmart.WinForms.Tests.csproj
@@ -6,10 +6,10 @@
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
-		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<Platform>x64</Platform>
 		<PlatformName>windows</PlatformName>
 		<LangVersion>latest</LangVersion>
+		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -27,8 +27,8 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-		<PackageReference Include="xunit" Version="2.7.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.8">
+		<PackageReference Include="xunit" Version="2.8.0" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -44,6 +44,9 @@
 
 	<ItemGroup>
 	  <None Update="appsettings.User.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="xunit.runner.json">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
