new approach to testing

--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
@@ -888,6 +888,8 @@
     <Compile Include="..\Common\Interfaces\SLD\VendorOptionType.cs">
       <Link>Interfaces\SLD\VendorOptionType.cs</Link>
     </Compile>
+    <Compile Include="..\Common\IStreetSmartBrowser.cs" Link="IStreetSmartBrowser.cs" />
+    <Compile Include="..\Common\StreetSmartBrowserAdapter.cs" Link="StreetSmartBrowserAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\ReleaseNotes.txt">
