--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
