--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
@@ -98,6 +98,9 @@
 		<Compile Include="..\Common\API\APISettings.cs">
 			<Link>API\APISettings.cs</Link>
 		</Compile>
+		<Compile Include="..\Common\API\Bearer.cs">
+      		<Link>API\Bearer.cs</Link>
+    	</Compile>
 		<Compile Include="..\Common\API\CommandLineArgs.cs">
 			<Link>API\CommandLineArgs.cs</Link>
 		</Compile>
@@ -137,6 +140,9 @@
 		<Compile Include="..\Common\API\Events\ViewerUpdateEvent.cs">
 			<Link>API\Events\ViewerUpdateEvent.cs</Link>
 		</Compile>
+		<Compile Include="..\Common\API\Events\BearerTokenChangedEvent.cs">
+      		<Link>API\Events\BearerTokenChangedEvent.cs</Link>
+    	</Compile>
 		<Compile Include="..\Common\API\ImageViewer.cs">
 			<Link>API\ImageViewer.cs</Link>
 		</Compile>
@@ -548,6 +554,9 @@
 		<Compile Include="..\Common\Interfaces\API\IAPISettings.cs">
 			<Link>Interfaces\API\IAPISettings.cs</Link>
 		</Compile>
+		<Compile Include="..\Common\Interfaces\API\IBearer.cs">
+			<Link>Interfaces\API\IBearer.cs</Link>
+    	</Compile>
 		<Compile Include="..\Common\Interfaces\API\IImageViewer.cs">
 			<Link>Interfaces\API\IImageViewer.cs</Link>
 		</Compile>
