--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.NET6.csproj
@@ -915,4 +915,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.7" />
   </ItemGroup>
+	<ItemGroup>
+    <InternalsVisibleTo Include="StreetSmart.WPF.Tests" />
+  </ItemGroup>
 </Project>
