changes on refactoring equals methods

--- a/StreetSmartAPI/StreetSmart.WPF.Tests/StreetSmart.WPF.Tests.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Tests/StreetSmart.WPF.Tests.csproj
@@ -9,6 +9,7 @@
     <IsTestProject>true</IsTestProject>
     <SignAssembly>True</SignAssembly>
     <DelaySign>True</DelaySign>
+    <AssemblyOriginatorKeyFile>StreetSmart.WPF.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
