--- a/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.NET6.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms.Multiple/StreetSmart.WinForms.Multiple.NET6.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net6.0-windows7</TargetFramework>
 		<OutputType>WinExe</OutputType>
 		<RootNamespace>MultipleAPI.WinForms</RootNamespace>
 		<AssemblyName>MultipleAPI.WinForms</AssemblyName>
