--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.csproj
@@ -5,7 +5,7 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 		<PlatformName>windows</PlatformName>
-		<Version>24.7.0.0</Version>
+		<Version>24.7.1.0-rc1</Version>
 		<Authors>CycloMedia</Authors>
 		<Company>CycloMedia</Company>
 		<PackageIconUrl>cyclomedia.png</PackageIconUrl>
@@ -78,18 +78,6 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="cyclomedia.png" />
-		<None Include="..\Common\locales\af.pak" Link="locales\af.pak">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Include="..\Common\locales\am.pak" Link="locales\am.pak">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Include="..\Common\locales\en-US.pak" Link="locales\en-US.pak">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Include="..\Common\locales\en-GB.pak" Link="locales\en-GB.pak">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="..\Common\API\APIBase.cs">
