--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ FakesAssemblies/
 /StreetSmartAPI/StreetSmart.Tests.NET6/appsettings.User.json
 /StreetSmartAPI/StreetSmart.WinForms.Tests.NET6/appsettings.User.json
 /StreetSmartAPI/StreetSmart.WinForms.Tests/appsettings.User.json
+/StreetSmartAPI/StreetSmart.API/WPF/locales
