--- a/StreetSmartAPI/StreetSmart.WPF.Tests/StreetSmart.WPF.Tests.csproj
+++ b/StreetSmartAPI/StreetSmart.WPF.Tests/StreetSmart.WPF.Tests.csproj
@@ -44,6 +44,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentAssertions" Version="6.12.1" />
+		<PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
 		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
